<?xml version="1.0" encoding="utf-8"?>
<!--
		* Copyright (C) 2007 Google Inc. * * Licensed under the Apache
		License, Version 2.0 (the "License"); * you may not use this file
		except in compliance with the License. * You may obtain a copy of the
		License at * * http://www.apache.org/licenses/LICENSE-2.0 * * Unless
		required by applicable law or agreed to in writing, software *
		distributed under the License is distributed on an "AS IS" BASIS, *
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
		implied. * See the License for the specific language governing
		permissions and * limitations under the License.
-->

<resources>
 <color name="colorin">#447799</color>
  <color name="colorin3">#FF0000</color>
 <color name="colorin2">#FF7799</color>
 <string name="activity_title">Installed Applications</string>
    <string name="menu_configure_locale">Change language</string>
    <string name="aplict_name">Duck Hunt</string>
            <string name="no_notes">no_notes</string>
    <string name="app_name">Duck Hunt</string>
    <string name="title_text">Juan Manuel Ballesteros. UAH 0.1</string>
    <string name="menu_continuar">Continuar</string>
    <string name="menu_opciones">Opciones</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_pausa">Pausa</string>
    <string name="jugar">Jugar</string>
    <string name="jugarx2">Jugarx2</string>
    <string name="opciones">Opciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="acercade">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="uah">Universidad Alcala de Henares</string>
    <string name="proyecto">Proyecto de Fin de Carrera: Guia de Desarrollo de videojuegos sobre Android.
	Como crear Duck Hunt, un clasico divertido y adictivo</string>
    <string name="autor">Juan Manuel Ballesteros Ortega Email: ballesteros_ortega@hotmail.com</string>
    <string name="dialog_salir_titulo">Salir</string>
    <string name="dialog_salir_texto">¿Estas seguro que deseas salir de la
		aplicación?</string>
    <string name="dialog_salir_ok">OK</string>
    <string name="dialog_salir_cancelar">Cancelar</string>
    <string name="dialog_sms_titulo">Enviar Puntuación</string>
    <string name="gameover_question">¿Deseas enviar tu puntuación a un amigo?</string>
    <string name="Message_Shared">¡Acabo de lograr </string>
    <string name="Message_Shared2">puntos en el Duck Hunt para Android!. Intenta superarme si puedes</string>
    <string name="preferences_sonido">Sonido</string>
    <string name="preferences_musica_menu_titulo">Musica</string>
    <string name="preferences_musica_menu_texto">Musica en el menu principal?</string>
    <string name="preferences_efectos_ingame_titulo">Efectos de Sonido</string>
    <string name="preferences_efectos_ingame_texto">Efectos de sonido durante la partida</string>
    <string name="preferences_vibracion">Vibración</string>
    <string name="preferences_vibracion_titulo">Vibracion</string>
    <string name="preferences_vibracion_texto">Permite vibración durante la partida</string>
    <string name="preferences_controles">Controles</string>
    <string name="preferences_controles_titulo">Manejo del juego</string>
    <string name="preferences_controles_texto">Forma de jugar</string>
    <string name="preferences_idioma">Idioma</string>
    <string name="preferences_idioma_titulo">Cambiar Idioma</string>
    <string name="preferences_idioma_texto">Español</string>
    <string name="ayuda_info_1">DUCK HUNT 2013. Por JMBDev</string>
    <string name="ayuda_info_2">jmbdev@gmail.com</string>
    <string name="ayuda_info_3">®2013 JMBDev Duck Hunt Mobile.</string>
    <string name="menu_juego_un_pato">Un pato</string>
    <string name="menu_juego_dos_patos">Dos patos</string>
    <string name="juego_puntuacion">PUNTUACIÓN</string>
    <string name="interfaceRound">Ronda</string>
    <string name="interfacePerfect">Perfect 30.000</string>
	<string name="interfaceGameOver">Partida Terminada</string>
    <string name="interfacePause">Pausa</string>
    
</resources>