<?xml version="1.0" encoding="utf-8"?>
<!--
		Copyright (C) 2008 Google Inc. Licensed under the Apache License,
		Version 2.0 (the "License"); you may not use this file except in
		compliance with the License. You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
-->


<!--
		This is a primitive example showing the different types of preferences
		available.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
     android:background="@drawable/border">
    

    <CheckBox
        android:id="@+id/check4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences_efectos_ingame_titulo" />

    <CheckBox
        android:id="@+id/check5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences_vibracion_titulo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" >

        <!-- The following four examples use a large image -->
        <!-- 1. Non-scaled view, for reference -->

        <Button
            android:id="@+id/ok2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_salir_ok" />

        <Button
            android:id="@+id/cancel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/dialog_salir_cancelar" />
    </RelativeLayout>
    <!-- <Spinner -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:dialogTitle="@string/preferences_idioma" -->
    <!-- android:entries="@array/entradas_idioma" -->
    <!-- android:entryValues="@array/valores_idioma" -->
    <!-- android:key="preference_idioma" -->
    <!-- android:summary="@string/preferences_idioma_texto" -->
    <!-- android:title="@string/preferences_idioma_titulo" /> -->


    <!-- <Spinner -->
    <!-- android:id="@+id/controles" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:dialogTitle="@string/preferences_idioma" -->
    <!-- android:entries="@array/entradas_controles" -->
    <!-- android:entryValues="@array/valores_controles" -->
    <!-- android:key="preference_controles" -->
    <!-- android:summary="@string/preferences_controles_texto" -->
    <!-- android:title="@string/preferences_controles_titulo" /> -->

</LinearLayout>