<?xml version="1.0" encoding="utf-8"?>
<!--
		* Copyright (C) 2008 Google Inc. * * Licensed under the Apache
		License, Version 2.0 (the "License"); * you may not use this file
		except in compliance with the License. * You may obtain a copy of the
		License at * * http://www.apache.org/licenses/LICENSE-2.0 * * Unless
		required by applicable law or agreed to in writing, software *
		distributed under the License is distributed on an "AS IS" BASIS, *
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
		implied. * See the License for the specific language governing
		permissions and * limitations under the License.
-->

<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:layout_width="match_parent" -->
<!--     android:layout_height="match_parent"  -->
<!--     android:background="@null"> -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border" 
        android:padding="10dip">

        <!-- The following four examples use a large image -->
        <!-- 1. Non-scaled view, for reference -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/ayuda_info_1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/pato_small"
             />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/ayuda_info_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/perro_small" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/ayuda_info_3" />
    </LinearLayout>

<!--</ScrollView>-->